Closed Bug 587938 Opened 14 years ago Closed 14 years ago

content randomly disappears or isn't being created at all for NVDA's virtual buffer, effective August 16, 2010

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
major

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- beta5+

People

(Reporter: MarcoZ, Assigned: surkov)

References

Details

(Keywords: regression)

Attachments

(1 file)

I observe this on Facebook, for example, where while browsing the page, because of an JavaScript update, the whole content of the news items (start page after login) suddenly disappears. All headings below the actual "News" heading (level 2) disappears, and only the footer is visible.

This is a regression from either bug 576777 or bug 420993, which were the only ones landing between the August 15 and August 16 builds. The August 15 build is still fine, the August 16 build is broken.

This is not so much a problem with static HTML pages, but with ones whose content gets filled after the actual load, or dynamically, via JavaScript.
STR:
1. Go to http://www.marco-zehe.de/examples/Tutorial_aria-invalid_and_role_alert.html
2. Read the page with the virtual Cursor of NVDA. Notice that all elements are there.
3. Focus the first input field.
4. Without entering anything, tab to the next one. An ARIA alert is iinserted at the bottom of the page informing you that there is no valid name.
5. Again examine the virtual buffer.

Result: The fieldset with the name, e-mail and website fields is completely gone. The only thing there is the label and the textarea plus the buttons and the current alert.
blocking2.0: --- → ?
Attached patch patchSplinter Review
wrong logic of child index getting by offset when offsets were cached.
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #466606 - Flags: review?(marco.zehe)
Attachment #466606 - Flags: review?(ginn.chen)
Comment on attachment 466606 [details] [diff] [review]
patch

>+      // test cached offsets

Please make it more clear that you're performing the tests a second time to make sure the results are still the same now that the first calls made sure the offsets are now cached.

You can also add something to the first comment that says "causes the offsets to be cached".

I've been running this patch in a local build for half a day now and can confirm that both my form example and Facebook are back to working order.

Therefore, r=me for the test part and the functionality.
Attachment #466606 - Flags: review?(marco.zehe) → review+
Attachment #466606 - Flags: review?(ginn.chen) → review+
Comment on attachment 466606 [details] [diff] [review]
patch

Fixes an important regression from bug 576777.
Attachment #466606 - Flags: approval2.0?
Comment on attachment 466606 [details] [diff] [review]
patch

a=beltzner
Attachment #466606 - Flags: approval2.0? → approval2.0+
blocking2.0: ? → beta5+
landed on 2.0 - http://hg.mozilla.org/mozilla-central/rev/11de95535653
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: