Bug 587938 - content radomly disappears or isn't being created at all for NVDA's virtual buffer, effective August 16, 2010, r=marcoz, ginn.chen, a=beltzner